<resources>
    <string name="app_name">妹纸</string>
    <string name="about">关于</string>
    <string name="star">*</string>
    <string name="depend">本应用依赖库</string>
    <string name="libs">com.android.support:appcompat-v7:26.1.0\n
        com.squareup.okhttp3:okhttp:3.9.0\n
        com.squareup.retrofit2:retrofit:2.3.0\n
        com.squareup.retrofit2:converter-gson:2.3.0\n
        com.android.support:recyclerview-v7:26.1.0\n
        com.android.support:cardview-v7:26.1.0\n
        com.github.bumptech.glide:glide:4.2.0\n
        com.android.support:design:26.1.0</string>
    <string name="author">zzzz1997</string>
    <string name="introduce">自用，就不介绍了。hiahia~~`</string>
    <string name="gank">Gank.io</string>
    <string name="loading">载入中…</string>
    <string name="open">在浏览器中打开</string>
    <string name="copy">复制链接</string>
</resources>
